@@ -33,7 +33,7 @@
 #ifndef ASM
 #define ASM
 #endif
-#include <rtems/score/targopts.h>
+#include <rtems/score/cpuopts.h>
 #include <rtems/score/c4x.h>
 
 /*
